--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -7,6 +7,7 @@
   position: relative;
   .exp {
     z-index: 100;
+    margin-bottom: 20px;
     .header-pro {
       font-style: normal;
       font-weight: bold;
